re-arranged the code to be outside of the connect.js implementation for easier hooking in to existing connect implementations and started working on the filters

--- a/dev/index.html
+++ b/dev/index.html
@@ -5,7 +5,7 @@
 	<title>Node Backbone </title>
 
 	<% if(data.mode=='dev'){ %>
-		<script type="text/javascript" src="/app/vendors/require.js" data-main="/app/config"></script>
+		<script type="text/javascript" src="/app/vendors/require.js" data-main="/app/startup"></script>
 	<% }else if(data.mode=='debug'){ %>
 		<script type="text/javascript" src="/js/application.min.js"></script>
 		<script type="text/javascript" src="/js/templates.js"></script>
